--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <script src="https://cdn.tiny.cloud/1/hrfd9wdvyrmcwqkjlwqu7u720k51jrg8vg6ykeeb3bdnh9xm/tinymce/6/tinymce.min.js"
-        referrerpolicy="origin"></script> -->
+    <script src="https://cdn.tiny.cloud/1/hrfd9wdvyrmcwqkjlwqu7u720k51jrg8vg6ykeeb3bdnh9xm/tinymce/6/tinymce.min.js"
+        referrerpolicy="origin"></script>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
